--- a/src/HeBack/CMakeLists.txt
+++ b/src/HeBack/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required (VERSION 3.8)
 set(IS_ARCH_DEMO true)
 
 # 设置文件名称
-set (appName arch-demo)
+set (appName HeBack)
 
 # 包含库目录
 include_directories ("./")
