--- a/src/HeBack/conf/data-source.yaml
+++ b/src/HeBack/conf/data-source.yaml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.220.128:3306/test?useUnicode=true&useSSL=false&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&useSSL=false&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: whx051021
     druid:
      max-active: 5
   redis:
-    host: 192.168.220.128
+    host: localhost
     port: 6379
-    password: 01star
+    password: whx051021
   data:
     mongodb:
-      uri: mongodb://awei:123456@192.168.220.128:27017/firstDb
+      uri: mongodb://localhost:27017/firstDb
